# SConvTransform

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  build.sh  configure.sh
include/: CMakeLists.txt  CSA.h  SConv.h  SConv.td
lib/: CMakeLists.txt  CSA.cpp  LowerToBLAS.cpp  SConv.cpp  SplitToShards.cpp
sconv-opt/: sconv-opt.cpp
scripts/: opt.sh  run.sh  test_convbench.sh  verify.py
scripts/convbench/: README.md  gen_payload.sh
scripts/convbench/datasets/: elementwise_timm+pt2.csv  rectangle_timm_pt2.csv  regular_timm+pt2.csv
scripts/convbench/payloads/: correctness_payload.mlir  performance_payload.mlir
test/: pay2load.mlir  payload.mlir  paysload.mlir  s2conv.mlir  s2conv_mK.mlir  sconv.mlir  sconv_arch.mlir  sconv_latency.mlir  sconv_mK.mlir
test/lowering/: sconv-blas.mlir
transform-opt/: transform-opt.cpp
